--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,18 @@
+logging:
+  level:
+    ROOT: DEBUG
+    org.hibernate.SQL: DEBUG
+    com.sunglowsys: DEBUG
+
+server:
+  port: 8082
+
 spring:
-  dataSource:
-    diriver-class-name: com.mysql.jdbc.Driver
+  datasource:
     url: jdbc:mysql://localhost:3306/atithih
     username: root
     password: root
-
-    jpa:
-      hibernate:
-        ddl-auto: update
-        show-sql: true
-        database: mysql
-        database-platform: org.hibernate.dialect.MysqlDialect
-        open-in-view: false
-        generate-ddl: true
-
+  jpa:
+    hibernate:
+      ddl-auto: update
+      dialect: org.hibernate.dialect.MySQL8Dialec
